<resources>
    <string name="app_name">Prufer</string>
    <string name="assessorattendance">Attendance</string>
    <string name="attendanceareyouattraninglocation">Are you at Training Centre Location?</string>
    <string name="attendanceofthestudent">Is the Student Present at TC Location?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Next">Next</string>
    <string name="submit">Submit</string>
    <string name="Proceed">Proceed</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="upload">Upload</string>
    <string name="share">Share</string>
    <string name="mail">Mail</string>
    <string name="feedbackpic">2.4 Click a picture of the feedback form.</string>
    <string name="classroompic">3. Click a picture of the classroom.</string>
    <string name="attendancepic">2.3 Click a picture of Trainee Attendance Record.</string>
    <string name="enrolmentformpic">2.2 Click a picture of Enrolment form with PMKVY logo and PMKVY Disclaimer.</string>
    <string name="pmkvyposter">2. Click a picture of poster of PMKVY displayed in counseling room.</string>
    <string name="pmkvyclass">3.1 Click a picture of poster of PMKVY displayed in the Classroom.</string>
    <string name="pmkvysignane">1. Click a picture of PMKVY signage displayed outside the centre.</string>
    <string name="labpic">4. Click a picture of the laboratory.</string>
    <string name="pmkvybooklet">2.1 Click a picture of the PMKVY Booklet provided to trainees.</string>
    <string name="pmkvylab">4.1 Click a picture of poster of PMKVY displayed in the Laboratory.</string>
    <string name="groupphoto">Click a group photo of all the students.</string>
    <string name="groupphotoself">Click a group photo with Selfie of all the students.</string>
    <string name="anx1">Is the center located at the same address as mentioned on SDMS?\n</string>
    <string name="anx2">Is Infrastructure(No. of classrooms, State of Laboratories, etc)present at the
Training Center adequate and satisfactory to conduct the training?\n
</string>
    <string name="anx3">Is the assessment being conducted at same center, where trainees got trained ?\n</string>
    <string name="anx4">Assessment is conducted on the Scheduled Date ?\n
</string>
    <string name="anx5">If No , Reasons for change of Date ?\n
</string>
    <string name="anx6">Are the Trainees being assessed for same job role, for which they were trained ?\n</string>
    <string name="anx7">Each Trainee’s identity checked before conducting assessment ?\n</string>
    <string name="anx8">Are the trainees confirming that they paid the Assessment Fee ?\n</string>
    <string name="anx9">Are the trainees aware they are enrolled under PMKVY Scheme ?\n</string>
    <string name="anx10">Are the trainees aware of the Certification Process ?\n
</string>
    <string name="anx11">Are the trainees aware of Reward Disbursement?\n</string>
    <string name="anx12">Are the trainees aware of the Course fee ?\n
</string>
    <string name="anx13">Are the trainees aware of Auto Debit Facility ?\n</string>
    <string name="anx14">Are the trainees aware of the Placement opportunities ?\n</string>
    <string name="anx15">Trainee Feedback form available, and signed by the trainee ?\n</string>
    <string name="anx16">Trainee Attendance Record Available, and signed by the trainees ?\n
</string>
    <string name="anx17">Trainees Enrolment Forms available , with PMKVY logo and PMKVY Disclaimer ?
Are the forms signed by trainees?\n
</string>
    <string name="anx18">Are the names on Enrolment forms tallying with the Attendance records of the
batch (check any 5 forms)\n
</string>
    <string name="anx19">Are the trainees given a PMKVY booklet/ Pamphlet for information?\n
</string>
    <string name="anx20">Posters of PMKVY displayed in Counseling room ?\n</string>
    <string name="anx21">Posters of PMKVY displayed in Classroom ?\n</string>
    <string name="anx22">PMKVY signage displayed outside the Center ?\n</string>
    <string name="line22">2.<b>All the questions are mandatory.You need to answer all the questions in order to proceed.</b> </string>
    <string name="inst1">Pmkvy Signane</string>
    <string name="inst2">PMKVY poster(Counseling room)</string>
    <string name="inst3">PMKVY booklet/pamphlet</string>
    <string name="inst4">Enrollment form</string>
    <string name="inst5">Attendance record</string>
    <string name="inst6">Feedback record</string>
    <string name="inst7">Classroom photo</string>
    <string name="inst8">Pmkvy poster(Classroom)</string>
    <string name="inst9">Lab photo</string>
    <string name="inst10">Pmkvy poster (Lab</string>
    <string name="GroupPhoto">Group Photo</string>
    <string name="GroupPhotoselfie">Group Photo With Selfie</string>
    <string name="line13">9  Dont quit the application in between exam else the exam will not be submitted</string>
    <string name="scanner_activity">ZBar Scanner - Full Activity</string>
    <string name="scanner_fragment_activity">ZBar Scanner - Full Fragment Activity</string>
    <string name="simple_scanner_activity">ZBar Scanner - Simple Activity</string>
    <string name="simple_scanner_fragment_activity">ZBar Scanner - Simple Fragment Activity</string>
    <string name="simple_activity_sample">Simple Activity Sample</string>
    <string name="simple_fragment_sample">Simple Fragment Sample</string>
    <string name="activity_sample">Full Activity Sample</string>
    <string name="fragment_sample">Full Fragment Sample</string>
    <string name="toggle_flash">Flash</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="cancel_button1">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>