<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="7"
    android:layout_margin="16dp"
    tools:context=".Attendance.Assessor_Atten">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/li1"
        android:layout_weight=".3"
        app:layout_constraintTop_toTopOf="@+id/rgroup"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/attendanceareyouattraninglocation"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            tools:layout_editor_absoluteY="16dp" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="32dp"
        android:layout_weight=".5"
        android:orientation="horizontal"
        android:id="@+id/rgroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/li1"
        >

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Yes"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/No"
        app:layout_constraintStart_toEndOf="@id/radioButton"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="19dp" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/uploadphoto1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1.3"
        android:visibility="gone"
        android:orientation="horizontal"
       >


        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/input_photograph"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="left"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:src="@drawable/ic_user"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />


        <Button
            android:id="@+id/input_photograph1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/Blue"
            android:drawableLeft="@drawable/ic_photo_camera"
            android:drawablePadding="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:text="UPLOAD YOUR PHOTO"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/inputidproof"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1.3"
        android:visibility="gone"
        android:orientation="horizontal"
        >


        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/input_photograph2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="left"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:src="@drawable/ic_user"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />


        <Button
            android:id="@+id/input_photograph22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/Blue"
            android:drawableLeft="@drawable/ic_photo_camera"
            android:drawablePadding="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:text="UPLOAD YOUR ID PROOF"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/currentlocation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_weight="1.5"
        android:weightSum="2"
        >
<TextView
    android:id="@+id/current_location1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="Your Current location"
    android:layout_marginTop="15dp"
    android:layout_weight=".3"
    android:layout_marginRight="12dp"
    android:layout_marginLeft="12dp"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:elevation="4dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="1.7"
        android:background="#fff"
        android:orientation="vertical"


        >

        <TextView
            android:id="@+id/locationn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left|center"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:drawableLeft="@drawable/ic_location"
            android:text="Your Current Location"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:drawablePadding="10dp"
            android:textSize="14sp" />

    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tclocation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_weight="1.5"
        android:weightSum="2"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Training Centre location"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="15dp"
            android:layout_weight=".3"
            android:layout_marginRight="12dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="1dp"
            android:elevation="5dp"
            android:layout_weight="1.7"
            android:background="#fff"
            android:orientation="vertical"


            >

            <TextView
                android:id="@+id/centrelocationn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:scrollbars="vertical"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:drawableLeft="@drawable/ic_location"
                android:text="Training Centre location"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:drawablePadding="10dp"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>


    <Button
        android:layout_weight=".6"
        android:layout_below="@+id/passwordEditText1"
        android:id="@+id/markattendance"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/Next"
        android:visibility="gone"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold|normal"
        android:textColor="@color/white"
        android:elevation="10dp"
        android:background="@drawable/button_shadow"
        />


</LinearLayout>
